--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <!--    <img id="catImage" src="./cat.png" alt="Cute Cat" style="display: none;">-->
     <div class="content">
         <canvas id="scene" width="500px" height="500px"></canvas>
-        <img src="./cat.gif" alt="First GIF" class="side-gif" style="display: none;">
+<!--        <img src="./cat.gif" alt="First GIF" class="side-gif" style="display: none;">-->
         <img id="catImage" src="./cat.png" alt="Cute Cat" style="display: none;">
-        <img src="./cat.gif" alt="Second GIF" class="side-gif" style="display: none;">
+<!--        <img src="./cat.gif" alt="Second GIF" class="side-gif" style="display: none;">-->
     </div>
     <div id="snowflakeContainer"></div>
     <div id="greeting" style="color: red; text-align: center; font-size: 24px; opacity: 0; font-family: 'Indie Flower', cursive;"></div>
